--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <title>weblectuer_attendancesystem_nodejs</title>
+    <title>Attendance System</title>
     <link rel="manifest" href="manifest.json">
 
     <script>
